# services/schoolAdmin/validations/schoolAdmin.validation.js
@@ -2,20 +2,31 @@ const Joi = require("joi");
 
 function validateSchoolAdmin(admin) {
   const schema = Joi.object({
-    schoolName: Joi.string().min(3).max(255).required(),
-    schoolEmail: Joi.string().email().required(),
     adminName: Joi.string().min(3).max(255).required(),
-    adminEmail: Joi.string().email().required(),
+    schoolName: Joi.string().min(3).max(255).required(),
+    email: Joi.string().email().required(),
+    schoolEmail: Joi.string().email().required(),
     password: Joi.string().min(5).max(255).required(),
   });
 
   return schema.validate(admin);
 }
 
-function validateLoginSchoolAdmin(admin) {
+function validateSchoolAdminLogin(admin) {
   const schema = Joi.object({
     schoolEmail: Joi.string().email().required(),
     password: Joi.string().min(5).max(255).required(),
+  });
+
+  return schema.validate(admin);
+}
+
+function validateUpdateSchoolAdmin(admin) {
+  const schema = Joi.object({
+    adminName: Joi.string().min(3).max(255),
+    schoolName: Joi.string().min(3).max(255),
+    email: Joi.string().email(),
+    schoolEmail: Joi.string().email(),
   });
 
   return schema.validate(admin);
@@ -24,7 +35,6 @@ function validateLoginSchoolAdmin(admin) {
 function validateAddATeacher(admin) {
   const schema = Joi.object({
     name: Joi.string().min(3).max(255).required(),
-    surname: Joi.string().min(3).max(255).required(),
     email: Joi.string().email().required(),
   });
 
@@ -61,11 +71,22 @@ function validateAddAStudent(admin) {
   return schema.validate(admin);
 }
 
+function validateAddStudentToClass(admin) {
+  const schema = Joi.object({
+    userName: Joi.string().required(),
+    classId: Joi.string().required(),
+  });
+
+  return schema.validate(admin);
+}
+
 module.exports = {
   validateSchoolAdmin,
-  validateLoginSchoolAdmin,
+  validateSchoolAdminLogin,
+  validateUpdateSchoolAdmin,
   validateAddATeacher,
   validateCreateClass,
   validateAddTeacherToClass,
   validateAddAStudent,
+  validateAddStudentToClass
 };
